# python-ami

./: .coveragerc  .gitignore  .gitreview  README.rst  openstack-common.conf  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
ami/: __init__.py  client.py  test.py
ami/openstack/common/: gettextutils.py  jsonutils.py  log.py  test.py
ami/tests/: test_client.py
doc/source/: conf.py  index.rst
