[metadata]
name = python-ami
author = Paul Belanger
author-email = paul.belanger@polybeacon.com
description-file = README.rst
license = Apache-2
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[files]
packages =
    ami

[pbr]
warnerrors = True

[upload_sphinx]
upload-dir = doc/build/html
